# a-simple-triangle

./: .gitignore  LICENSE  README.md
part-02-setup-console/main/src/: main.cpp
part-03-setup-macos/: shared-scripts.sh
part-03-setup-macos/macos/: project.yml
part-04-setup-ios/main/src/core/: graphics-wrapper.hpp  platform.cpp  platform.hpp  sdl-wrapper.cpp
part-05-setup-android/android/: .gitignore
part-05-setup-android/android/app/: CMakeLists.txt
part-05-setup-android/android/sdl/: build.gradle
part-05-setup-android/macos/: setup.sh
part-05-setup-android/main/src/: main.cpp
part-05-setup-android/main/src/core/: graphics-wrapper.hpp  platform.cpp  platform.hpp  sdl-wrapper.cpp
part-06-setup-emscripten/: a-simple-triangle.code-workspace
part-06-setup-emscripten/console/: CMakeLists.txt  setup.sh
part-06-setup-emscripten/emscripten/: CMakeLists.txt  cmake-post-build.sh  setup.sh
part-06-setup-emscripten/ios/: project.yml
part-06-setup-emscripten/main/src/: main.cpp
part-06-setup-emscripten/main/src/core/: graphics-wrapper.hpp  platform.cpp  platform.hpp
part-07-setup-windows/android/: setup.ps1  setup.sh
part-07-setup-windows/console/: cmake-post-build.sh
part-07-setup-windows/macos/: .gitignore
part-07-setup-windows/main/src/: main.cpp
part-07-setup-windows/main/src/core/: platform.cpp  sdl-wrapper.cpp
part-08-refactor-round-1/android/sdl/jni/: Application.mk
part-08-refactor-round-1/console/: .gitignore
part-08-refactor-round-1/ios/: .gitignore  setup.sh
part-08-refactor-round-1/main/src/core/: engine.cpp
part-08-refactor-round-1/windows/: CMakeLists.txt  cmake-post-build.ps1  setup.ps1
part-09-load-3d-model/: a-simple-triangle.code-workspace  shared-scripts.sh
part-09-load-3d-model/android/: setup.ps1  setup.sh
part-09-load-3d-model/console/: CMakeLists.txt  setup.sh
part-09-load-3d-model/emscripten/: CMakeLists.txt  setup.sh
part-09-load-3d-model/ios/: project.yml
part-09-load-3d-model/macos/: project.yml
part-09-load-3d-model/main/src/application/: application.cpp
part-09-load-3d-model/main/src/core/: graphics-wrapper.hpp  mesh.cpp  platform.hpp  vertex.hpp
part-09-load-3d-model/windows/: setup.ps1
part-10-render-3d-model-opengl/: shared-scripts.sh
part-10-render-3d-model-opengl/android/app/: CMakeLists.txt
part-10-render-3d-model-opengl/android/sdl/: .gitignore
part-10-render-3d-model-opengl/console/: .gitignore
part-10-render-3d-model-opengl/ios/: .gitignore  setup.sh
part-10-render-3d-model-opengl/macos/: setup.sh
part-10-render-3d-model-opengl/main/src/application/: application.hpp
part-10-render-3d-model-opengl/main/src/core/: assets.cpp  assets.hpp  engine.hpp  log.hpp  perspective-camera.hpp
part-10-render-3d-model-opengl/windows/: CMakeLists.txt  cmake-post-build.ps1
part-11-opengl-texture-mapping/console/: cmake-post-build.sh
part-11-opengl-texture-mapping/macos/: setup.sh
part-12-scenes/: shared-scripts.sh
part-12-scenes/console/: CMakeLists.txt  setup.sh
part-12-scenes/ios/: setup.sh
part-12-scenes/main/src/core/: asset-inventory.cpp  engine.cpp  graphics-wrapper.hpp  sdl-wrapper.hpp
part-14-vulkan-console/: shared-scripts.sh
part-14-vulkan-console/android/: build.gradle
part-14-vulkan-console/android/app/: CMakeLists.txt
part-14-vulkan-console/android/sdl/: .gitignore
part-14-vulkan-console/ios/: project.yml
part-14-vulkan-console/macos/: .gitignore  project.yml
part-14-vulkan-console/main/src/core/: bitmap.hpp  engine.cpp  log.cpp  platform.hpp
part-15-vulkan-macos/android/: setup.ps1
part-15-vulkan-macos/console/: .gitignore
part-15-vulkan-macos/emscripten/: CMakeLists.txt
part-15-vulkan-macos/main/src/application/: application.hpp
part-15-vulkan-macos/main/src/core/: asset-inventory.hpp  asset-manager.hpp  assets.cpp  graphics-wrapper.hpp  static-mesh-instance.hpp
part-15-vulkan-macos/windows/: CMakeLists.txt
part-16-vulkan-ios/: shared-scripts.sh
part-16-vulkan-ios/android/: .gitignore  setup.sh
part-16-vulkan-ios/console/: CMakeLists.txt
part-16-vulkan-ios/main/src/core/: renderer.hpp  sdl-wrapper.hpp  vertex.hpp
part-17-vulkan-android/android/app/: build.gradle
part-17-vulkan-android/console/: setup.sh
part-17-vulkan-android/main/src/core/: graphics-wrapper.hpp
part-18-vulkan-emscripten/: a-simple-triangle.code-workspace
part-18-vulkan-emscripten/android/gradle/wrapper/: gradle-wrapper.properties
part-19-vulkan-windows/android/app/: CMakeLists.txt
part-19-vulkan-windows/windows/: setup.ps1
part-20-vulkan-create-device/android/: setup.sh
part-20-vulkan-create-device/ios/: project.yml
part-20-vulkan-create-device/macos/: .gitignore
part-20-vulkan-create-device/windows/: CMakeLists.txt
part-21-vulkan-create-swapchain/emscripten/: setup.sh
part-21-vulkan-create-swapchain/macos/: setup.sh
part-22-vulkan-create-renderer/emscripten/: CMakeLists.txt
part-23-vulkan-frame-buffers/: shared-scripts.sh
part-23-vulkan-frame-buffers/console/: build.sh
part-23-vulkan-frame-buffers/ios/: setup.sh
part-23-vulkan-frame-buffers/main/src/: _clang-format
part-24-vulkan-render-loop/android/: settings.gradle  setup.ps1
part-24-vulkan-render-loop/emscripten/: build.sh
part-25-vulkan-shader-pipeline/android/: setup.sh
part-25-vulkan-shader-pipeline/main/vulkan_shader_source/: default.frag
part-25-vulkan-shader-pipeline/windows/: setup.ps1
part-26-vulkan-load-mesh/: shared-scripts.sh
part-26-vulkan-load-mesh/ios/: setup.sh
part-27-vulkan-load-textures/console/: cmake-post-build.sh
part-27-vulkan-load-textures/main/vulkan_shader_source/: compile_shaders.ps1
part-27-vulkan-load-textures/windows/: cmake-post-build.ps1
part-28-vulkan-render-scene/console/: setup.sh
part-28-vulkan-render-scene/emscripten/: template.html
part-29-window-resize-events/main/: .gitignore
part-30-basic-user-input/android/: setup.ps1
part-30-basic-user-input/macos/: project.yml  setup.sh
part-30-basic-user-input/main/src/: main.cpp
part-30-basic-user-input/main/vulkan_shader_source/: compile_shaders.sh  default.vert
(+176 files in other folders)
